cmake_minimum_required (VERSION 2.8.3)
PROJECT (HDFJAVA_JNI_HDFLIB C)

SET (HDFJAVA_JNI_HDF_CSRCS
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfanImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfdfanImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfdfcompImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfdfpalImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfdfsdImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfdfuImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfexceptionImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfgrImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfheImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfhxImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfnativeImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfr24Imp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfr8Imp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfsdsImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfstructsutil.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfvdataImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfvfImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfvgroupImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfvhImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfvqImp.c
    ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR}/hdfvsqImp.c
)

INCLUDE_DIRECTORIES( ${HDFJAVA_JNI_HDFLIB_SOURCE_DIR} )

ADD_LIBRARY (${HDFJAVA_JNI_HDF_LIB_TARGET} ${LIB_TYPE} ${HDFJAVA_JNI_HDF_CSRCS})
TARGET_LINK_LIBRARIES (${HDFJAVA_JNI_HDF_LIB_TARGET} ${LINK_LIBS})
SET_GLOBAL_VARIABLE (HDFJAVA_LIBRARIES_TO_EXPORT "${HDFJAVA_LIBRARIES_TO_EXPORT};${HDFJAVA_JNI_HDF_LIB_TARGET}")
HDFJAVA_SET_LIB_OPTIONS (${HDFJAVA_JNI_HDF_LIB_TARGET} ${HDFJAVA_JNI_HDF_LIB_NAME} ${LIB_TYPE})
IF (WIN32 AND NOT CYGWIN)
  IF (BUILD_SHARED_LIBS)
    GET_FILENAME_COMPONENT(HDFJAVA_JNI_HDF_DLL_NAME ${HDFJAVA_JNI_HDF_LIB_TARGET} NAME_WE)
    # MESSAGE (STATUS "HDFJAVA_JNI_HDF_DLL_NAME: ${HDFJAVA_JNI_HDF_DLL_NAME}")
    IF (BUILD_TESTING)
      ADD_CUSTOM_TARGET (HDFJAVA_JNI_HDF-Test-Copy ALL
          COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/${HDFJAVA_JNI_HDF_DLL_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/
          COMMENT "Copying ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/${HDFJAVA_JNI_HDF_DLL_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX} to ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/"
      )
    ENDIF (BUILD_TESTING)
  ENDIF (BUILD_SHARED_LIBS)
ENDIF (WIN32 AND NOT CYGWIN)

#-----------------------------------------------------------------------------
# Add Target(s) to CMake Install for import into other projects
#-----------------------------------------------------------------------------
IF (HDFJAVA_EXPORTED_TARGETS)
  INSTALL (
      TARGETS 
          ${HDFJAVA_JNI_HDF_LIB_TARGET}
      EXPORT
          ${HDFJAVA_EXPORTED_TARGETS}
      LIBRARY DESTINATION ${HJAVA_INSTALL_LIB_DIR} COMPONENT libraries 
      ARCHIVE DESTINATION ${HJAVA_INSTALL_LIB_DIR} COMPONENT libraries
      RUNTIME DESTINATION ${HJAVA_INSTALL_BIN_DIR} COMPONENT libraries
  )
ENDIF (HDFJAVA_EXPORTED_TARGETS)
